# copilot-rust

./: cabal.project
copilot-rust/: copilot-rust.cabal
copilot-rust/src/Copilot/Compile/: Rust.hs
copilot-rust/src/Copilot/Compile/Rust/: CodeGen.hs  Compile.hs  CompileRust.hs  Expr.hs  ExprRust.hs  Name.hs  Settings.hs  Type.hs
example-ast-construction/: CHANGELOG.md  example-ast-construction.cabal
example-ast-construction/app/: Main.hs
example-spec/: example-spec.cabal
example-spec/app/: Main.hs
