cabal-version:      3.0
name:               example-ast-construction
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Antanas Kalkauskas
maintainer:         antanas.kalkauskas@sensmetry.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example-spec
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.9 && < 5
                    , language-rust
                    , prettyprinter >=1.0 && <2.0
    hs-source-dirs:   app
    default-language: Haskell2010
